[package]
name = "hologram"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
clap = { version = "3.0", features = ["paw"] }
paw = "1.0"
