[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"
name = "hologram"
version = "0.1.0"
[dependencies]
anyhow = "1.0"
daemonize = "0.4"
directories-next = "2.0"
nix = "0.19"
notify = "4.0"
paw = "1.0"
serde_json = "1.0"
tempfile = "3.1"
toml = "0.5"

[dependencies.ctrlc]
features = ["termination"]
version = "3.1"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.structopt]
features = ["paw"]
version = "0.3"

[dependencies.tokio]
features = ["fs", "rt-multi-thread", "macros", "sync", "process"]
version = "1.8"

[dependencies.uuid]
features = ["v4"]
version = "0.8"
